--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,4 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(ortools CONFIG REQUIRED)
 
-add_executable(main main.cpp)
-target_link_libraries(main ortools::ortools)
+add_subdirectory(tsp)
