--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,6 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(ortools CONFIG REQUIRED)
+find_package(absl REQUIRED)
 
 add_subdirectory(tsp)
