Get lower bound using lp

--- a/tsp/CMakeLists.txt
+++ b/tsp/CMakeLists.txt
@@ -13,3 +13,6 @@ target_link_libraries(tsp-spanning tsp ortools::ortools)
 
 add_executable(tsp-local local_optimizations.cpp)
 target_link_libraries(tsp-local tsp ortools::ortools)
+
+add_executable(lp lp.cpp)
+target_link_libraries(lp tsp ortools::ortools)
